--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "url": "https://github.com/xiaoxian521"
   },
   "dependencies": {
+    "@howdyjs/mouse-menu": "^2.1.6",
     "@pureadmin/descriptions": "^1.2.1",
     "@pureadmin/table": "^3.2.1",
     "@pureadmin/utils": "^2.5.0",
@@ -75,7 +76,9 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-tippy": "^6.5.0",
-    "vue-types": "^5.1.3"
+    "vue-types": "^5.1.3",
+    "vxe-table": "4.6.25",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
